[package]
name = "libopus-sys"
version = "0.1.0"
links = "opus"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.154"

[build-dependencies]
bindgen = "0.69.4"
pkg-config = "0.3.30"
cc = { version = "1.0.96", features = ["parallel"] }
